--- a/src/assets/styles/scss.scss
+++ b/src/assets/styles/scss.scss
@@ -32,6 +32,7 @@ html, body {
   padding: 0;
   font-size: 16px;
   font-family: "Open Sans", Helvetica, "Lucida Sans Unicode", "Lucida Grande", Arial, Verdana, sans-serif;
+  background-color: $background;
 }
 p a, span a, li a {
   color: $link;
