--- a/src/assets/styles/scss.scss
+++ b/src/assets/styles/scss.scss
@@ -31,7 +31,8 @@ html, body {
   margin: 0;
   padding: 0;
   font-size: 16px;
-  font-family: "Open Sans", Helvetica, "Lucida Sans Unicode", "Lucida Grande", Arial, Verdana, sans-serif;
+  font-size: 18px;
+  font-family: "Custom Noto Sans", "Open Sans", Helvetica, "Lucida Sans Unicode", "Lucida Grande", Arial, Verdana, sans-serif;
   background-color: $background;
 }
 p a, span a, li a {
@@ -309,4 +310,27 @@ label {
 .slide-leave-from {
   transform: translate(0px, 0px);
 }
- 
+
+/**
+ * fonts
+ */
+@font-face {
+  font-family: "Custom Noto Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local("NotoSansCJKjp-Regular.otf"),
+       local("NotoSansJP-Regular.otf"),
+       url("@/assets/fonts/Noto_Sans_JP/NotoSansJP-Regular.woff2") format("woff2");
+  // unicode-range: U+000-5FF;
+}
+@font-face {
+  font-family: "Custom Noto Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: local("NotoSansCJKjp-Bold.otf"),
+       local("NotoSansJP-Bold.otf"),
+       url("@/assets/fonts/Noto_Sans_JP/NotoSansJP-Bold.woff2") format("woff2");
+  // unicode-range: U+000-5FF;
+}
