add(syntax highlight): original no-highlight

--- a/src/assets/styles/syntaxhighlight.scss
+++ b/src/assets/styles/syntaxhighlight.scss
@@ -63,3 +63,14 @@ pre[class*="language-"] {
     border-radius: 0 0 10px 10px;
   }  
 }
+
+// original-nohighlight
+pre.language-no {
+  padding: 0.77em 1.3em 0.77em 1.3em !important;
+  color: #585858 !important;
+  font-family: Consolas, Monaco, monospace !important;
+  border: 2.3px solid #e9e3de !important;
+  border-radius: 7px !important;
+  background-color: #fdfbf9 !important;
+  box-shadow: none !important;
+}
