--- a/src/assets/styles/scss.scss
+++ b/src/assets/styles/scss.scss
@@ -177,6 +177,46 @@ label {
   width: 728px;
   margin: auto;
 }
+.posts {
+  margin-top: 0.3em;
+  .post {
+    a {
+      display: block;
+      margin-bottom: 0.99em;
+      padding: 1.5% 0 calc(1.5% + 1.1em) 7px;
+      border-bottom: dotted 2.3px #e3deda;
+      color: $text;
+      text-decoration: none;
+      article {
+        h2 {
+          margin: 0 0 0.5em 0;
+          font-size: 0.95em;
+          line-height: 1.4;
+        }
+        .meta {
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
+          flex-wrap: wrap;
+          gap: 1.5em;
+          color: #9e9e9e;
+          font-size: 0.7em;
+          .created_at, .updated_at {
+            position: relative;
+            svg {
+              top: 2px;
+              transform: scale(0.95);
+            }
+            span {
+              display: inline-block;
+              margin-left: 1.5em;
+            }
+          }
+        }
+      }
+    }
+  }
+}
 main {
   header {
     h1 {
