add: tooltip debounce (delay)

--- a/src/assets/styles/scss.scss
+++ b/src/assets/styles/scss.scss
@@ -184,7 +184,7 @@ label {
       display: block;
       margin-bottom: 0.99em;
       padding: 1.5% 0 calc(1.5% + 1.1em) 7px;
-      border-bottom: dotted 2.3px #e3deda;
+      border-bottom: 0.7px solid #e3deda;
       color: $text;
       text-decoration: none;
       article {
