--- a/src/assets/styles/content.scss
+++ b/src/assets/styles/content.scss
@@ -6,22 +6,29 @@
     line-height: 1.8;
   }
   h2,  h3,  h4,  h5,  h6 {
-    margin-top: 2.5em;
+    margin-top: 1.8em;
     margin-bottom: 1.7em;
+    padding-top: 0.7em;
     font-weight: bold;
     line-height: 1.25;
   }
   h2 {
-    padding: 0 0.1em 0.3em;
+    padding-left: 0.1em;
+    padding-right: 0.1em;
+    padding-bottom: 0.3em;
     border-bottom: solid 1.3px #e0e0e0;
     font-size: 1.57em;
   }
   h3 {
-    padding: 0;
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 0;
     font-size: 1.27em;    
   }
   h4 {
-    padding: 0;
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 0;
     color: #484848;
     font-size: 1.14em;    
   }
