--- a/src/assets/styles/content.scss
+++ b/src/assets/styles/content.scss
@@ -200,48 +200,51 @@
     .thumbnail {
       width: 228.5px;
       min-width: 228.5px;
-    }
-    .thumbnail img {
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
-      flex-shrink: 0;
-      border-radius: 8.8px 0 0 8.8px;
+       img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        flex-shrink: 0;
+        border-radius: 8.8px 0 0 8.8px;
+      }
     }
     .content {
       display: flex;
       flex-direction: column;
       justify-content: center;
       margin-left: 1.3em;
-    }
-    .title {
-      display: -webkit-box;
-      -webkit-box-orient: vertical;
-      -webkit-line-clamp: 2;
-      overflow: hidden;
-      margin-bottom: -0.1em;
-      font-size: 0.93em;
-      line-height: 1.3;
-    }
-    .snippet {
-      margin-top: 0.3em;
-      max-height: 1.5em;
-      -webkit-line-clamp: 1;
-      overflow: hidden;
-      color: #959595;
-      font-size: 0.77em;
-    }
-    .footer {
-      margin-top: 0.7em;
-      font-size: 0.7em;
-      color: #4e4e4e;
-    }
-    .favicon {
-      margin: 0 3px 0 0;
-      line-height: 1.9;
-    }
-    .favicon img {
-      height: 1em;
+      .title {
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+        overflow: hidden;
+        margin-bottom: -0.1em;
+        font-size: 0.93em;
+        line-height: 1.3;
+      }
+      .snippet {
+        display: -webkit-box;
+        margin-top: 0.3em;
+        max-height: 1.5em;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 1;
+        overflow: hidden;
+        color: #959595;
+        font-size: 0.77em;
+      }
+      .footer {
+        display: flex;
+        margin-top: 0.7em;
+        font-size: 0.7em;
+        color: #4e4e4e;
+        .favicon {
+          margin: 0 5px 0 0;
+          line-height: 1.9;
+        }
+        .favicon img {
+          height: 1em;
+        }  
+      }  
     }
   }
 }
