change: SSR (with force reload) -> CSR in all pages
ヘッダーロゴリンクのページ遷移問題、ページネーションの I/F 変更なども含む

--- a/src/assets/styles/scss.scss
+++ b/src/assets/styles/scss.scss
@@ -227,6 +227,12 @@ main {
     }
   }
 }
+.csr_loading {
+  width: 37px;
+  height: 37px;
+  margin: auto auto 100vh;
+  text-align: center;
+}
 
 /**
  * modal series
