--- a/src/assets/styles/dark.scss
+++ b/src/assets/styles/dark.scss
@@ -1,9 +1,9 @@
-html.darkmode {
+html.dark {
   $background: #4d4c4b;
   background-color: $background;
 }
 
-.darkmode {
+.dark {
   $text                       : #f2f2f2;
   $text_white                 : #5b5b5b;
   $text_white_hover           : #4e4e4e;
