--- a/src/assets/styles/syntaxhighlight.scss
+++ b/src/assets/styles/syntaxhighlight.scss
@@ -6,6 +6,9 @@ pre[class*="language-"] {
   line-height: 1.6 !important;
   border-radius: 11px;
   white-space: pre;
+  @include mobile {
+    padding: 1.3em 1.1em 1.5em;
+  }
   code {
     color: #f3f3f3 !important;
     font-size: 0.85em;
