fix: use css vars override

--- a/src/assets/styles/dark.scss
+++ b/src/assets/styles/dark.scss
@@ -1,5 +1,5 @@
 html.dark {
-  $background: #4d4c4b;
+  $background: #3f3e41;
   background-color: $background;
 }
 
@@ -7,7 +7,7 @@ html.dark {
   $text                       : #f2f2f2;
   $text_white                 : #5b5b5b;
   $text_white_hover           : #4e4e4e;
-  $background                 : #4d4c4b;
+  $background                 : #3f3e41;
   $primary                    : #ec6839;
   $primary_hover              : #e26234;
   $link                       : #bb0000;
