fix: styles for iOS webkit

--- a/src/assets/styles/content.scss
+++ b/src/assets/styles/content.scss
@@ -64,7 +64,7 @@
     color: #54514f;
     font-size: 0.85em;
     line-height: 1;
-    font-family: Consolas,Monaco,monospace;
+    font-family: Consolas, Monaco, Menlo, monospace;
     border-radius: 5px;
     background-color: #f3efec;
   }
