--- a/src/assets/styles/syntaxhighlight.scss
+++ b/src/assets/styles/syntaxhighlight.scss
@@ -13,7 +13,7 @@ pre[class*="language-"] {
     color: #f3f3f3 !important;
     font-size: 0.85em;
     line-height: 1.6;
-    font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+    font-family: Consolas, Monaco, Menlo, monospace;
   }
   .token.keyword,
   .token.annotation {
