add: no-image.jpg

--- a/src/assets/styles/content.scss
+++ b/src/assets/styles/content.scss
@@ -118,6 +118,9 @@
     border-left: 0;
     border-right: 0;
   }
+  .color-red {
+    color: #ff5151;
+  }
   .box-common {
     position: relative;
     padding: 3em 1.5em 0.6em;
