fix: styles for syntax highlight

--- a/src/assets/styles/syntaxhighlight.scss
+++ b/src/assets/styles/syntaxhighlight.scss
@@ -67,6 +67,9 @@ pre[class*="language-"] {
   .token.comment {
     color: #7f888d;
   }
+  .token.key.atrule {
+    color: #dc8ba8;
+  }
   .token.key.property {
     color: #f2b18f;
   }
