add: keyboard key style

--- a/src/assets/styles/content.scss
+++ b/src/assets/styles/content.scss
@@ -282,4 +282,16 @@
       }
     }
   }
+  .key {
+    margin: auto 0.5em;
+    padding: 0.27em 0.39em;
+    border-radius: 5px;
+    font-family: monospace;
+    font-weight: bold;
+    font-size: 0.7em;
+    color: #555;
+    background-color: #f9f9f9;
+    border: solid 1.57px #bbb;
+    box-shadow: 0.3px 0.8px 2px rgb(0 0 0 / 11%);
+  }
 }
