--- a/src/assets/styles/syntaxhighlight.scss
+++ b/src/assets/styles/syntaxhighlight.scss
@@ -112,6 +112,9 @@ pre[class*="language-shell"] {
   .token {
     // color: #f3f3f3 !important;
     color: #efece1 !important;
+    .comment {
+      color: #7f888d !important;
+    }
   }
 }
 
