add: mac screenshot style

--- a/src/assets/styles/content.scss
+++ b/src/assets/styles/content.scss
@@ -89,6 +89,9 @@
     &.win11_ss {
       border-radius: 8px !important;
     }
+    &.mac_ss {
+      border-radius: 13px !important;
+    }
     ~ em {
       display: block;
       margin: 3px auto;
